deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.12
        volumeMounts:
          - name: config
            mountPath: /etc/nginx/conf.d/
        ports:
        - containerPort: 80
      volumes:
        - name: config
          configMap:
            name: nginx-config
