reloadable_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileshare
spec:
    replicas: 3
    strategy:
        type: RollingUpdate
        rollingUpdate:
          maxUnavailable: 1
          maxSurge: 2
    selector:
        matchLabels:
          app: fileshare
    template:
      metadata:
        labels:
          app: fileshare
      spec:
        containers:
          - name: nginx
            image: centosadmin/reloadable-nginx:1.12
            ports:
              - containerPort: 80
            volumeMounts:
              - name: config
                mountPath: /etc/nginx/conf.d
              - name: data
                mountPath: /data
        volumes:
          - name: config
            configMap:
              name: fileshare
          - name: data
            persistentVolumeClaim:
              claimName: fileshare
